--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -28,36 +28,34 @@ body {
 
 //Global button//
 .button {
-  &__btn {
-    background: transparent;
-    border-radius: 4px;
-    border: 1px solid #ffffff;
-    padding: 0px 35px;
-    margin-right: 21px;
-    a {
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 52px;
-      letter-spacing: 0.5px;
-      color: #ffffff;
-    }
-    &--orange {
-      background-color: #ff5a30;
-      border: none;
-      padding: 0 39px;
-      a {
-        letter-spacing: 0.1px;
-      }
-    }
+  font-family: $fontBase;
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  padding: 0px 42px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  cursor: pointer;
 
-    &--portfolio {
-      background-color: #ff5a30;
-      border: none;
-      padding: 0 39px;
-      a {
-        letter-spacing: 0.1px;
-      }
-    }
+  &--small {
+    font-size: 14px;
+    line-height: 44px;
+    padding: 0px 34px;
+  }
+
+  &--orange {
+    background-color: #ff5a30;
+    border: none;
+    letter-spacing: 0.1px;
+  }
+
+  &--portfolio {
+    background-color: #ff5a30;
+    border: none;
+    letter-spacing: 0.1px;
   }
 }
 
@@ -87,78 +85,25 @@ body {
   }
 }
 
-//Global styles: work > scroll > button//
+// Global styles: scroll
+.scroll {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+
+  &__tx {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 42px;
+  }
+}
+
 .work {
-  .scroll {
-    margin: 59px 0 120px 0;
-    .button {
-      &__btn {
-        background: transparent;
-        border-radius: 4px;
-        padding: 2px 42px;
-        background-color: #ff5a30;
-
-        a {
-          font-size: 15px;
-          font-weight: 700;
-          line-height: 44px;
-          letter-spacing: 0.5px;
-          color: #ffffff;
-        }
-        &--orange {
-          background-color: #ff5a30;
-          border: none;
-          padding: 7px 37px;
-
-          a {
-            letter-spacing: 1.1px;
-          }
-        }
-      }
-    }
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 18px;
-    &__tx {
-      font-size: 28px;
-      font-weight: 700;
-      line-height: 42px;
-      padding-left: 20px;
-      padding-top: 18px;
-    }
-  }
-
-  //Global work > button//
-  .button {
-    margin: 23px 0 0 22px;
-    &__btn {
-      background: transparent;
-      border-radius: 4px;
-      border: 1px solid #ff5a30;
-      padding: 0px 28px;
-      padding-top: 2px;
-
-      a {
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 36px;
-        letter-spacing: 0.5px;
-        color: #ff5a30;
-      }
-      &--orange {
-        background-color: #ff5a30;
-        border: none;
-        padding: 0 39px;
-
-        a {
-          letter-spacing: 0.1px;
-        }
-      }
-    }
-  }
   min-height: 752px;
   background-color: #ffffff;
+  padding-bottom: 120px;
+
   .wrapper {
     margin-top: 120px;
 
@@ -208,6 +153,7 @@ body {
   &__average {
     display: flex;
     gap: 30px;
+    margin-bottom: 80px;
   }
 
   &__cart {
