--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,50 +1,11 @@
 .services {
-  min-height: 880px;
   background-image: url("../image/services/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  padding-bottom: 80px;
 
   .wrapper {
-    margin-bottom: 271px;
     position: relative;
-  }
-
-  .scroll {
-    .button {
-      &__btn {
-        background: transparent;
-        border-radius: 4px;
-        padding: 2px 42px;
-        background-color: #ff5a30;
-
-        a {
-          font-size: 15px;
-          font-weight: 700;
-          line-height: 44px;
-          letter-spacing: 0.5px;
-          color: #ffffff;
-        }
-        &--orange {
-          background-color: #ff5a30;
-          border: none;
-          padding: 7px 37px;
-
-          a {
-            letter-spacing: 1.1px;
-          }
-        }
-      }
-    }
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 18px;
-    &__tx {
-      font-size: 28px;
-      font-weight: 700;
-      line-height: 42px;
-      padding-left: 47px;
-    }
   }
 
   &__absolute {
@@ -106,33 +67,6 @@
     }
   }
 
-  .button {
-    padding: 28px 25px;
-    &__btn {
-      background: transparent;
-      border-radius: 4px;
-      border: 1px solid #ffffff;
-      padding: 0px 35px;
-      margin-right: 21px;
-      a {
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 44px;
-        letter-spacing: 0.5px;
-        color: #ffffff;
-      }
-      &--orange {
-        background-color: #ff5a30;
-        border: none;
-        padding: 0 33px;
-
-        a {
-          letter-spacing: 0.1px;
-        }
-      }
-    }
-  }
-
   .overview {
     position: absolute;
 
@@ -166,7 +100,7 @@
   &__content {
     display: flex;
     gap: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
   }
 
   &__block {
