--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body a {
   background: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  padding: 0px 42px;
+  padding: 0px 38px;
   font-size: 16px;
   font-weight: 700;
   line-height: 52px;
@@ -317,7 +317,7 @@ body a {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
-  margin-bottom: 60px;
+  margin-bottom: 59px;
   color: #ffffff;
 }
 .section__scroll {
@@ -518,6 +518,7 @@ body a {
   left: 0;
   border-radius: 4px;
   z-index: 10;
+  padding-bottom: 27px;
 }
 .services__discription {
   display: flex;
