--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -16,8 +16,8 @@
     left: 0;
     border-radius: 4px;
     z-index: 10;
+    padding-bottom: 27px;
   }
-
   &__discription {
     display: flex;
     justify-content: center;
