--- a/css/main.css
+++ b/css/main.css
@@ -25,21 +25,25 @@ body a {
   background: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  padding: 0px 38px;
+  padding: 0px 40px;
   font-size: 16px;
   font-weight: 700;
   line-height: 52px;
+  height: 52px;
   letter-spacing: 0.5px;
   color: #ffffff;
+  box-sizing: border-box;
   cursor: pointer;
 }
 .button--small {
   font-size: 14px;
   line-height: 44px;
-  padding: 0px 34px;
+  padding: 0px 32px;
+  height: 44px;
 }
 .button--orange {
   background-color: #ff5a30;
+  border-color: #ff5a30;
   border: none;
   letter-spacing: 0.1px;
 }
@@ -74,11 +78,6 @@ body a {
   align-items: center;
   justify-content: center;
   gap: 40px;
-}
-.scroll__tx {
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 42px;
 }
 
 .work {
@@ -116,11 +115,6 @@ body a {
 .work__title {
   max-width: 729px;
   min-height: 120px;
-}
-.work__title h3 {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
 }
 .work__average {
   display: flex;
@@ -164,11 +158,6 @@ body a {
   padding-top: 81px;
   margin-bottom: 59px;
 }
-.top__title h3 {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
-}
 .top__conteiner {
   display: flex;
   gap: 102px;
@@ -177,6 +166,20 @@ body a {
   background-color: aqua;
   border-radius: 10%;
   transition: all;
+}
+
+.typography {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+}
+.typography--title {
+  font-size: 46px;
+  line-height: 59.8px;
+}
+.typography--leadBold {
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .header {
@@ -317,8 +320,13 @@ body a {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
-  margin-bottom: 59px;
+  margin-bottom: 61px;
   color: #ffffff;
+}
+.section__buttonWrap {
+  display: flex;
+  gap: 24px;
+  margin-left: -3px;
 }
 .section__scroll {
   display: flex;
@@ -406,13 +414,10 @@ body a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 120px;
+  margin-top: 122px;
   margin-bottom: 60px;
 }
 .overview__title {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
   color: #1e212c;
   padding-bottom: 23px;
 }
@@ -536,10 +541,9 @@ body a {
 }
 .services__example {
   display: flex;
-  gap: 24px;
-}
-.services__cart:nth-child(1) {
-  padding-left: 61px;
+  gap: 25px;
+  justify-content: center;
+  width: 100%;
 }
 .services__cart p {
   font-size: 14px;
@@ -567,26 +571,6 @@ body a {
 }
 .services .overview__content {
   padding-top: 92px;
-}
-.services .overview__construction {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 120px;
-  margin-bottom: 60px;
-}
-.services .overview__title {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
-  color: #1e212c;
-  padding-bottom: 23px;
-}
-.services .overview__text {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  color: #787a80;
 }
 .services__content {
   display: flex;
@@ -678,11 +662,6 @@ body a {
 }
 .port__title {
   margin-bottom: 60px;
-}
-.port__title h3 {
-  font-size: 46px;
-  font-weight: 700;
-  line-height: 59.8px;
 }
 .port__profile {
   margin-bottom: 22px;
@@ -787,6 +766,9 @@ body a {
   justify-content: center;
 }
 
+.construction {
+  padding-bottom: 120px;
+}
 .construction .wrapper .top {
   margin-top: 99px;
   margin-bottom: 0;
@@ -818,9 +800,6 @@ body a {
   margin-bottom: 12px;
 }
 .constructionCard__title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 30px;
   color: #1e212c;
   margin-bottom: 10px;
 }
@@ -873,4 +852,8 @@ body a {
 }
 .constructionList img {
   margin-right: 4px;
+}
+
+.bottomApe {
+  background-image: url("/image/bottomApe/image.jpg");
 }
