--- a/scss/_construction.scss
+++ b/scss/_construction.scss
@@ -1,4 +1,5 @@
 .construction {
+  padding-bottom: 120px;
   .wrapper {
     .top {
       margin-top: 99px;
@@ -45,9 +46,6 @@
   }
 
   &__title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 30px;
     color: #1e212c;
     margin-bottom: 10px;
 
