--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -32,22 +32,26 @@ body {
   background: transparent;
   border-radius: 4px;
   border: 1px solid #ffffff;
-  padding: 0px 38px;
+  padding: 0px 40px;
   font-size: 16px;
   font-weight: 700;
   line-height: 52px;
+  height: 52px;
   letter-spacing: 0.5px;
   color: #ffffff;
+  box-sizing: border-box;
   cursor: pointer;
 
   &--small {
     font-size: 14px;
     line-height: 44px;
-    padding: 0px 34px;
+    padding: 0px 32px;
+    height: 44px;
   }
 
   &--orange {
     background-color: #ff5a30;
+    border-color: #ff5a30;
     border: none;
     letter-spacing: 0.1px;
   }
@@ -91,12 +95,6 @@ body {
   align-items: center;
   justify-content: center;
   gap: 40px;
-
-  &__tx {
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 42px;
-  }
 }
 
 .work {
@@ -143,11 +141,6 @@ body {
   &__title {
     max-width: 729px;
     min-height: 120px;
-    h3 {
-      font-size: 46px;
-      font-weight: 700;
-      line-height: 59.8px;
-    }
   }
 
   &__average {
@@ -197,11 +190,6 @@ body {
   &__title {
     padding-top: 81px;
     margin-bottom: 59px;
-    h3 {
-      font-size: 46px;
-      font-weight: 700;
-      line-height: 59.8px;
-    }
   }
 
   &__conteiner {
@@ -217,5 +205,21 @@ body {
       border-radius: 10%;
       transition: all;
     }
+  }
+}
+
+.typography {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+
+  &--title {
+    font-size: 46px;
+    line-height: 59.8px;
+  }
+
+  &--leadBold {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
