--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -31,8 +31,14 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
-    margin-bottom: 59px;
+    margin-bottom: 61px;
     color: #ffffff;
+  }
+
+  &__buttonWrap {
+    display: flex;
+    gap: 24px;
+    margin-left: -3px;
   }
 
   &__scroll {
