--- a/scss/_bottomApe.scss
+++ b/scss/_bottomApe.scss
@@ -1,6 +1,13 @@
 .bottomApe {
   background-image: url("/image/bottomApe/image.jpg");
+  padding: 80px 0;
 
   .wrapper {
+  }
+
+  .formSend {
+  }
+
+  .formSend__title {
   }
 }
