--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,73 @@
   box-sizing: border-box;
 }
 
+.formSend {
+  background-color: white;
+  max-width: 498px;
+  min-height: 666px;
+  border: 1px solid #e5e8ed;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.0509803922), 0px 12px 10px -6px rgba(30, 33, 44, 0.0509803922), 0px 26px 24px -10px rgba(30, 33, 44, 0.0509803922), 0px 60px 80px -20px rgba(30, 33, 44, 0.0509803922);
+}
+.formSend__title {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 42px;
+  display: flex;
+  justify-content: center;
+  padding-top: 48px;
+  padding-left: 3px;
+  margin-bottom: 25px;
+}
+.formSend__form {
+  display: flex;
+}
+.formSend__example {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  width: 100%;
+}
+.formSend__example--footer {
+  flex-direction: column;
+  padding-left: 44px;
+  padding-right: 39px;
+  gap: 20px;
+}
+.formSend__cart p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #424551;
+  padding-bottom: 8px;
+}
+.formSend__cart--button {
+  padding-left: 166px;
+  padding-top: 23px;
+}
+.formSend__input {
+  min-height: 44px;
+  background-color: #e5e8ed;
+  border: 1px solid #d7dadd;
+  color: #9a9ca5;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  padding: 0px 73px 0px 15px;
+  border-radius: 4px;
+}
+.formSend__input--message {
+  padding: 0px 225px 0px 15px;
+}
+.formSend__input--messageBott {
+  min-height: 66px;
+  padding: 2px 229px 21px 13px;
+}
+.formSend__input--footer {
+  padding: 0px 228px 0px 15px;
+  color: #f4f5f6;
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
 }
@@ -535,10 +602,6 @@ body a {
   font-weight: 700;
   line-height: 42px;
 }
-.services__form {
-  display: flex;
-  margin-bottom: 20px;
-}
 .services__example {
   display: flex;
   gap: 25px;
@@ -856,5 +919,43 @@ body a {
 
 .bottomApe {
   background-image: url("/image/bottomApe/image.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   padding: 80px 0;
+}
+.bottomApe .wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+.bottomApe__block {
+  display: flex;
+  padding-left: 43px;
+  padding-top: 20px;
+}
+.bottomApe__click {
+  position: relative;
+  background-color: #ff5a30;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border-radius: 1px;
+  border: 1px solid #ff5a30;
+  margin-top: 2px;
+}
+.bottomApe__click:before {
+  content: "";
+  position: absolute;
+  background-image: url("/image/bottomApe/check.svg");
+  background-repeat: no-repeat;
+  top: 3px;
+  left: 2px;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  cursor: pointer;
+}
+.bottomApe__txt {
+  padding-left: 13px;
+  font-size: 14px;
+  line-height: 21px;
 }
