--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,13 @@
   border-radius: 4px;
   box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.0509803922), 0px 12px 10px -6px rgba(30, 33, 44, 0.0509803922), 0px 26px 24px -10px rgba(30, 33, 44, 0.0509803922), 0px 60px 80px -20px rgba(30, 33, 44, 0.0509803922);
 }
-.formSend__title {
+.formSend .typography {
   font-size: 28px;
   font-weight: 700;
   line-height: 42px;
   display: flex;
   justify-content: center;
-  padding-top: 48px;
-  padding-left: 3px;
+  padding-top: 47px;
   margin-bottom: 25px;
 }
 .formSend__form {
@@ -33,8 +32,8 @@
 }
 .formSend__example--footer {
   flex-direction: column;
-  padding-left: 44px;
-  padding-right: 39px;
+  padding-left: 38px;
+  padding-right: 36px;
   gap: 20px;
 }
 .formSend__cart p {
@@ -45,8 +44,8 @@
   padding-bottom: 8px;
 }
 .formSend__cart--button {
-  padding-left: 166px;
-  padding-top: 23px;
+  display: flex;
+  justify-content: center;
 }
 .formSend__input {
   min-height: 44px;
@@ -64,11 +63,17 @@
 }
 .formSend__input--messageBott {
   min-height: 66px;
-  padding: 2px 229px 21px 13px;
+  padding: 2px 228px 25px 17px;
+  opacity: 0.8;
+  color: #9a9ca5;
+  border: 1px solid #d7dadd;
 }
 .formSend__input--footer {
   padding: 0px 228px 0px 15px;
   color: #f4f5f6;
+  opacity: 0.8;
+  color: #9a9ca5;
+  border: 1px solid #d7dadd;
 }
 
 body {
@@ -602,33 +607,6 @@ body a {
   font-weight: 700;
   line-height: 42px;
 }
-.services__example {
-  display: flex;
-  gap: 25px;
-  justify-content: center;
-  width: 100%;
-}
-.services__cart p {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-  color: #424551;
-  padding-bottom: 8px;
-}
-.services__input {
-  min-height: 44px;
-  background-color: #e5e8ed;
-  border: 1px solid #d7dadd;
-  color: #9a9ca5;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-  padding: 0px 73px 0px 15px;
-  border-radius: 4px;
-}
-.services__input--message {
-  padding: 0px 225px 0px 15px;
-}
 .services .overview {
   position: absolute;
 }
@@ -929,8 +907,9 @@ body a {
 }
 .bottomApe__block {
   display: flex;
-  padding-left: 43px;
-  padding-top: 20px;
+  padding-left: 36px;
+  padding-top: 19px;
+  margin-bottom: 24px;
 }
 .bottomApe__click {
   position: relative;
@@ -941,21 +920,21 @@ body a {
   border-radius: 1px;
   border: 1px solid #ff5a30;
   margin-top: 2px;
+  margin-right: 13px;
 }
 .bottomApe__click:before {
   content: "";
   position: absolute;
   background-image: url("/image/bottomApe/check.svg");
   background-repeat: no-repeat;
-  top: 3px;
-  left: 2px;
+  top: 4px;
+  left: 3px;
   right: 0;
   bottom: 0;
   z-index: 10;
   cursor: pointer;
 }
 .bottomApe__txt {
-  padding-left: 13px;
   font-size: 14px;
   line-height: 21px;
 }
