--- a/scss/_bottomApe.scss
+++ b/scss/_bottomApe.scss
@@ -11,8 +11,9 @@
 
   &__block {
     display: flex;
-    padding-left: 43px;
-    padding-top: 20px;
+    padding-left: 36px;
+    padding-top: 19px;
+    margin-bottom: 24px;
   }
 
   &__click {
@@ -24,14 +25,15 @@
     border-radius: 1px;
     border: 1px solid #ff5a30;
     margin-top: 2px;
+    margin-right: 13px;
 
     &:before {
       content: "";
       position: absolute;
       background-image: url("/image/bottomApe/check.svg");
       background-repeat: no-repeat;
-      top: 3px;
-      left: 2px;
+      top: 4px;
+      left: 3px;
       right: 0;
       bottom: 0;
       z-index: 10;
@@ -40,7 +42,6 @@
   }
 
   &__txt {
-    padding-left: 13px;
     font-size: 14px;
     line-height: 21px;
   }
