--- a/scss/global/_form.scss
+++ b/scss/global/_form.scss
@@ -7,14 +7,13 @@
   box-shadow: 0px 4px 4px -4px #1e212c0d, 0px 12px 10px -6px #1e212c0d,
     0px 26px 24px -10px #1e212c0d, 0px 60px 80px -20px #1e212c0d;
 
-  &__title {
+  .typography {
     font-size: 28px;
     font-weight: 700;
     line-height: 42px;
     display: flex;
     justify-content: center;
-    padding-top: 48px;
-    padding-left: 3px;
+    padding-top: 47px;
     margin-bottom: 25px;
   }
 
@@ -30,8 +29,8 @@
 
     &--footer {
       flex-direction: column;
-      padding-left: 44px;
-      padding-right: 39px;
+      padding-left: 38px;
+      padding-right: 36px;
       gap: 20px;
     }
   }
@@ -46,8 +45,8 @@
     }
 
     &--button {
-      padding-left: 166px;
-      padding-top: 23px;
+      display: flex;
+      justify-content: center;
     }
   }
 
@@ -67,12 +66,18 @@
 
     &--messageBott {
       min-height: 66px;
-      padding: 2px 229px 21px 13px;
+      padding: 2px 228px 25px 17px;
+      opacity: 0.8;
+      color: #9a9ca5;
+      border: 1px solid #d7dadd;
     }
 
     &--footer {
       padding: 0px 228px 0px 15px;
       color: #f4f5f6;
+      opacity: 0.8;
+      color: #9a9ca5;
+      border: 1px solid #d7dadd;
     }
   }
 }
