--- a/scss/global/_form.scss
+++ b/scss/global/_form.scss
@@ -80,4 +80,40 @@
       border: 1px solid #d7dadd;
     }
   }
+
+  .chekbox {
+    display: flex;
+    align-items: center;
+    user-select: none;
+
+    input {
+      display: none;
+
+      &:checked + span {
+        &:before {
+          display: flex;
+        }
+      }
+    }
+
+    &__icon {
+      position: relative;
+      display: flex;
+      background-color: #ff5a30;
+      width: 16px;
+      height: 16px;
+      border-radius: 1px;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      &:before {
+        content: "";
+        display: none;
+        background-image: url("/image/bottomApe/check.svg");
+        background-repeat: no-repeat;
+        width: 10px;
+        height: 8px;
+      }
+    }
+  }
 }
