--- a/scss/_bottomApe.scss
+++ b/scss/_bottomApe.scss
@@ -3,7 +3,6 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   padding: 80px 0;
-
   .wrapper {
     display: flex;
     justify-content: flex-end;
@@ -11,8 +10,8 @@
 
   &__block {
     display: flex;
-    padding-left: 36px;
-    padding-top: 19px;
-    margin-bottom: 24px;
+    flex-direction: column;
+    padding-left: 40px;
+    padding-top: 11px;
   }
 }
