--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -24,4 +24,10 @@
     font-weight: 400;
     line-height: 25.6px;
   }
+
+  &--form {
+    padding-top: 47px;
+    padding-left: 51px;
+    margin-bottom: 26px;
+  }
 }
