--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,7 +4,12 @@
   .wrapper {
   }
 
+  &__grid {
+    display: grid;
+  }
+
   &__info {
+    display: flex;
   }
 
   &__logo {
@@ -28,5 +33,9 @@
         background-repeat: no-repeat;
       }
     }
+  }
+
+  &__text {
+    max-width: 493px;
   }
 }
