--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -19,6 +19,13 @@
     line-height: 21px;
   }
 
+  &--smallRegulargrey {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #787a80;
+  }
+
   &--baseRegular {
     font-size: 16px;
     font-weight: 400;
